--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Clean
         run: docker-compose down
-      # - name: Test
-      #   run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+      - name: Test
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
