--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ DB_USER = rootuser
 DB_PASS = changeme
 DJANGO_SECRET_KEY = changeme
 DJANGO_ALLOWED_HOSTS = 127.0.0.1
+EMAIL_HOST_USER = 'saddassa@gmail.com'
+EMAIL_HOST_PASSWORD = 'cxcZ123X'
